--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,7 @@ a:hover{
 	color:#212121;
 	background-color:#fff;
 	border-radius: 3px;
-	box-shadow: 0 2px 7px 0 rgba(0, 0, 0, 0.19), 0 2px 6px 0 rgba(0, 0, 0, 0.2);
+	box-shadow: 0 3px 6px rgba(0,0,0,0.14), 0 3px 6px rgba(0,0,0,0.20);
 	overflow:auto;
 }
 #quick_card{
@@ -153,7 +153,7 @@ hr{
 	text-align:center;
 	background-color:#e91e63; /*Change FAB background color */
 	border-radius:99px;
-	box-shadow: 0 4px 7px 0 rgba(0, 0, 0, 0.19), 0 2px 6px 0 rgba(0, 0, 0, 0.2);
+	box-shadow: 0 3px 6px rgba(0,0,0,0.14), 0 3px 6px rgba(0,0,0,0.20);
     -webkit-transition: all 0.2s ease-in-out;
     -moz-transition: all 0.2s ease-in-out;
     -o-transition: all 0.2s ease-in-out;
@@ -165,7 +165,7 @@ hr{
 }
 #fab:hover{
 	background-color:#c2185b; /*Change FAB background color (on mouse over) */
-    box-shadow: 0 10px  8px 0 rgba(0, 0, 0, 0.19), 0 2px 6px 0 rgba(0, 0, 0, 0.2);
+    box-shadow: 0 10px 20px rgba(0,0,0,0.10), 0 8px 8px rgba(0,0,0,0.18);
 }
 
 footer{
