--- a/css/style.css
+++ b/css/style.css
@@ -14,15 +14,21 @@ body{
 	margin:0;
 	padding:0;
 	color:#212121;
+    font-size: 16px;
 	background-color:#EEEEEE;
 	font-family: 'Roboto', sans-serif;
 }
-a{
+.card a, footer a{
 	color:#e91e63; /*Change link color */
-	text-decoration:none;
+    font-weight: 600;
+    -webkit-transition: all 0.2s ease-in-out;
+    -moz-transition: all 0.2s ease-in-out;
+    -o-transition: all 0.2s ease-in-out;
+    transition: all 0.2s ease-in-out;
 }
-a:hover{
+.card a:hover, footer a:hover{
 	color:#c2185b; /*Change link color (on mouse over)*/
+    text-decoration:none;
 }
 #blue_bg{
 	z-index:-1;
@@ -38,8 +44,15 @@ a:hover{
 	color:#212121;
 	background-color:#fff;
 	border-radius: 3px;
-	box-shadow: 0 2px 7px 0 rgba(0, 0, 0, 0.19), 0 2px 6px 0 rgba(0, 0, 0, 0.2);
+	box-shadow: 0 3px 6px rgba(0,0,0,0.14), 0 3px 6px rgba(0,0,0,0.20);
 	overflow:auto;
+    -webkit-transition: all 0.2s ease-in-out;
+    -moz-transition: all 0.2s ease-in-out;
+    -o-transition: all 0.2s ease-in-out;
+    transition: all 0.2s ease-in-out;
+}
+.card:hover{
+    box-shadow: 0 10px 20px rgba(0,0,0,0.10), 0 8px 8px rgba(0,0,0,0.18);
 }
 #quick_card{
 	padding:25px;
@@ -73,11 +86,13 @@ a:hover{
 	margin-bottom:10px;
 }
 #about_card>.tab>.title{
-	font-size:16px;
+	font-size:18.5px;
+    font-weight: 600;
 	color:#e91e63; /*Change title and title icon color (About Card)*/
 }
 .title i{
 	position:relative;
+    font-size: 22px;
 	left:-10px;
 }
 #about_card>.tab>.content{
@@ -90,17 +105,17 @@ a:hover{
 }
 #about_card .element .name{
 	color:#212121;
-	font-size:15px;
+	font-size:16.5px;
 	margin-bottom:3px;
 }
 #about_card .element .info{
 	color:#616161;
-	font-size:14px;
+	font-size:14.5px;
 }
-hr{
-	width:60%;
-	color: #E0E0E0;
-	background-color: #E0E0E0;
+.hr{
+	width:100%;
+	color: #d1d1d1;
+	background-color: #d1d1d1;
 	height:1px;
 	border:0;
 }
@@ -115,7 +130,8 @@ hr{
 	margin-bottom:8px;
 }
 #contact_card>.tab>.title{
-	font-size:16px;
+	font-size:18.5px;
+    font-weight: 600;
 	color:#e91e63; /*Change title and title icon color (Contact Card)*/
 }
 #contact_card>.tab>.content{
@@ -125,16 +141,19 @@ hr{
 #contact_card>.tab>.content>.contacts{
 	margin:0 20px 0 20px;
 	display:inline-block;
-	font-size:14px;
+	font-size:14.5px;
 	color:#212121;
+    
 }
 #contact_card a{
 	color:#616161;
 	text-decoration:none; /*Change link color (ONLY Contact Card)*/
+    -webkit-transition: all 0.2s ease-in-out;
+    -moz-transition: all 0.2s ease-in-out;
+    -o-transition: all 0.2s ease-in-out;
+    transition: all 0.2s ease-in-out;
 }
-#contact_card a:hover{
-	color:#9E9E9E; /*Change link color (on mouse over, ONLY Contact Card) */
-}
+
 #fab{
 	position:fixed;
 	width:56px;
@@ -143,14 +162,18 @@ hr{
 	text-align:center;
 	background-color:#e91e63; /*Change FAB background color */
 	border-radius:99px;
-	box-shadow: 0 2px 7px 0 rgba(0, 0, 0, 0.19), 0 2px 6px 0 rgba(0, 0, 0, 0.2);
+	box-shadow: 0 3px 6px rgba(0,0,0,0.14), 0 3px 6px rgba(0,0,0,0.20);
+    -webkit-transition: all 0.2s ease-in-out;
+    -moz-transition: all 0.2s ease-in-out;
+    -o-transition: all 0.2s ease-in-out;
+    transition: all 0.2s ease-in-out;
 }
 #fab i{
 	color:#fff;
 	font-size:18px;
 }
 #fab:hover{
-	background-color:#c2185b; /*Change FAB background color (on mouse over) */
+	box-shadow: 0 10px 20px rgba(0,0,0,0.10), 0 8px 8px rgba(0,0,0,0.18);
 }
 
 footer{
@@ -158,12 +181,13 @@ footer{
 	position:fixed;
 	bottom:0;
 	width:100%;
+    font-family: 'Roboto', sans-serif;
 	text-align:center;
 	text-align:center;
-	font-size:15px;
+	font-size:13px;
 	color:#757575;
 	padding-bottom:10px;
-	font-weight: bold;
+	font-weight: 600;
 }
 /* MEDIA */
 @media (min-width: 961px){
@@ -189,4 +213,25 @@ footer{
 		bottom:2%;
 		right:2%;
 	}
+}
+
+.btn {
+    position: relative;
+	text-transform: uppercase;
+	display: inline-block;
+	word-spacing: normal;
+	border-radius: 3px;
+    font-weight: 600;
+    cursor: pointer;
+	box-shadow: none !important;
+}
+
+.btn-defaults:hover {
+	background-color: #e1e1e1;
+}
+
+.btn-disabled {
+	background-color: transparent;
+	color: rgba(0,0,0,0.26);
+   cursor: not-allowed;
 }
