--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,12 @@
 *:focus {
 	outline: none;
 }
+a {
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none; 
+}
 body{
 	margin:0;
 	padding:0;
