--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,8 @@ a {
 	-webkit-user-select: none;
 	-moz-user-select: none;
 	-ms-user-select: none;
-	user-select: none; 
+	user-select: none;
+	outline: none;
 }
 body{
 	margin:0;
