--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,15 @@
 	box-sizing: border-box;
 }
 *:focus {
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
 	outline: none;
+	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+	-moz-tap-highlight-color: rgba(0, 0, 0, 0);
+	-ms-tap-highlight-color: rgba(0, 0, 0, 0);
+	tap-highlight-color: rgba(0, 0, 0, 0);
 }
 a {
 	-webkit-user-select: none;
@@ -19,6 +27,10 @@ a {
 	-ms-user-select: none;
 	user-select: none;
 	outline: none;
+	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+	-moz-tap-highlight-color: rgba(0, 0, 0, 0);
+	-ms-tap-highlight-color: rgba(0, 0, 0, 0);
+	tap-highlight-color: rgba(0, 0, 0, 0);
 }
 body{
 	margin:0;
